# flutter_jvm_interop

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
java/: main.java
lib/: native_jvm.dart
linux/: CMakeLists.txt  clr.cpp  jvm.cpp  native_jvm_plugin.cc
linux/include/native_jvm/: native_jvm_plugin.h
windows/: CMakeLists.txt  clr.cpp  clr.h  jvm.cpp  native_jvm_plugin.cpp  native_jvm_plugin.h  native_jvm_plugin_c_api.cpp
windows/include/native_jvm/: native_jvm_plugin.h  native_jvm_plugin_c_api.h
